test/classes/nilability/coerce-away-nilable.good
coerce-away-nilable.chpl:6: error: cannot initialize variable 'notNilable' of non-nilable type 'borrowed MyClass' from a nilable 'borrowed MyClass?'
