test/classes/nilability/coerce-away-nilable.chpl
class MyClass { var x:int; }

var nilable:borrowed MyClass?;
writeln(nilable);

var notNilable:borrowed MyClass = nilable;
